# pyroomacoustics

./: .appveyor.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.rst  COPYING  Dockerfile  LICENSE  MANIFEST.in  Mini-project readme.md  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  appveyor.yml  augmenting_data.py  firwin_vs_butter.ipynb  notes.md  pyproject.toml  pyroomacoustics_demo.ipynb  requirements.txt  setup.py  signal_tests.ipynb  speech_command_dataset.py
.github/workflows/: lint.yml  pythonpackage.yml
IPython Notebooks/: Sample_Code_1.ipynb
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  make_apidoc.sh  make_materials_table.py  modules.rst  pyroomacoustics.acoustics.rst  pyroomacoustics.adaptive.adaptive_filter.rst  pyroomacoustics.adaptive.data_structures.rst  pyroomacoustics.adaptive.lms.rst  pyroomacoustics.adaptive.rls.rst  pyroomacoustics.adaptive.rst  pyroomacoustics.adaptive.subband_lms.rst  pyroomacoustics.adaptive.util.rst  pyroomacoustics.beamforming.rst  pyroomacoustics.bss.auxiva.rst  pyroomacoustics.bss.common.rst  pyroomacoustics.bss.fastmnmf.rst  pyroomacoustics.bss.fastmnmf2.rst  pyroomacoustics.bss.ilrma.rst  pyroomacoustics.bss.rst  pyroomacoustics.bss.sparseauxiva.rst  pyroomacoustics.bss.trinicon.rst  pyroomacoustics.build_rir.rst  pyroomacoustics.c_package.libroom_wrapper.rst  pyroomacoustics.c_package.rst  pyroomacoustics.datasets.base.rst  pyroomacoustics.datasets.cmu_arctic.rst  pyroomacoustics.datasets.distribution.rst  pyroomacoustics.datasets.google_speech_commands.rst  pyroomacoustics.datasets.locata.rst  pyroomacoustics.datasets.room.rst  pyroomacoustics.datasets.rst  pyroomacoustics.datasets.sofa.rst  pyroomacoustics.datasets.timit.rst  pyroomacoustics.datasets.utils.rst  pyroomacoustics.denoise.iterative_wiener.rst  pyroomacoustics.denoise.rst  (+61 more)
examples/: 2D_directivities_plot.py  2D_plot_for_source_and_microphone_directivities.py  README.txt  adaptive_filter_stft_domain.py  adaptive_filters.py  add_microphone_array_loaction_directivities.py  add_microphone_array_location_directivities.py  add_microphone_array_object_directivities.py  add_microphone_directivity.py  add_source_directivity.py  beamforming_delay_and_sum.py  beamforming_time_domain.py  bss_example.py  bss_ilrma.py  bss_iva.py  bss_live.py  circular_array_with_directivities.py  circular_directivities_helper_function_plot.py  circular_directivity_helper_function.py  cmu_arctic_corpus.py  datasets.py  delay_and_sum.py  doa_algorithms.py  doa_algorithms_infiniteroom.py  doa_anechoic_room.py  generate_images.py  generate_room_dataset.py  google_commands_dataset.py  google_speech_commands_corpus.py  hello.cpp  hmm_test.py  hmm_training.py  image_source_model.py  locata.py  locata_challenge.py  noise_reduction_spectral_subtraction.py  noise_reduction_subspace.py  noise_reduction_wiener_filtering.py  octave_band_filterbank.py  plot_directivity_2D.py  (+28 more)
examples/data/: INRIA_MUSIS.stl
examples/directivities/: add_circular_mic_array.py  add_mic_array_diff_directivities.py  add_source_and_microphone_directivities.py  cardioid_function.py  circular_mic_array.py  mic_array.py  mic_array_diff_directivities.py  plot_directivity_2D.py  plot_directivity_3D.py  simulate_binaural_recording.py  simulation_with_measured_directivity.py  source_and_microphone.py
examples/input_samples/: README.md
logo/: pyroomacoustics_logo_square.ai
notebooks/: README.md  demo_12.ipynb  mic_directivity_demo.ipynb  microphone_directivities_demo.ipynb  norm_music_demo.ipynb  pyroomacoustics_demo.ipynb  rir_demo.ipynb  rir_directivities_demo.ipynb  source_directivity_demo.ipynb  stft.ipynb  sweeping_directivity_demo.ipynb
pyroomacoustics/: Room.py  Signal.py  SoundSource.py  __init__.py  acoustics.py  beamforming.py  bss.py  build_rir.c  build_rir.cp37-win_amd64.pyd  build_rir.pyx  constants.py  directivities.py  geometry.py  materials.py  metrics.py  multirate.py  noise.py  open_sofa_interpolate.py  parameters.py  recognition.py  room.py  signal.py  soundsource.py  stft.py  sync.py  test_pra.py  utilities.py  wall.py  whitening.py  windows.py
pyroomacoustics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyroomacoustics/adaptive/: __init__.py  adaptive_filter.py  data_structures.py  lms.py  rls.py  subband_lms.py  util.py
pyroomacoustics/bss/: ILRMA.py  ILRMA.py___jb_tmp___  __init__.py  auxiva.py  common.py  fastmnmf.py  fastmnmf2.py  ilrma.py  sparseauxiva.py  trinicon.py
pyroomacoustics/c_package/: Makefile  __init__.py  is_list.c  libroom.c  libroom.cp37-win_amd64.pyd  libroom_wrapper.py  linalg.c  room.c  room.h  shoebox.c  tests.c  wall.c
pyroomacoustics/data/: materials.json  sofa_files.json  speech_directivity.csv  speech_directivity.json
pyroomacoustics/datasets/: __init__.py  base.py  cmu_arctic.py  distribution.py  google_speech_commands.py  locata.py  room.py  sofa.py  timit.py  utils.py
pyroomacoustics/denoise/: __init__.py  iterative_wiener.py  spectral_subtraction.py  subspace.py
pyroomacoustics/directivities/: __init__.py  analytic.py  base.py  direction.py  harmonics.py  histogram.py  integration.py  interp.py  measured.py  sofa.py
pyroomacoustics/doa/: __init__.py  cssm.py  detect_peaks.py  doa.py  frida.py  grid.py  histogram.py  music.py  normmusic.py  plotters.py  srp.py  tools_fri_doa_plane.py  tops.py  utils.py  waves.py
pyroomacoustics/experimental/: __init__.py  harmonics.py  (+8 more)
pyroomacoustics_local/: acoustics.py  build_rir.pyx  geometry.py  parameters.py  stft.py  sync.py
scripts/: build-wheels-pypi.sh  build-wheels.sh  run-build-native.sh  run-build.sh  run-docker-manylinux-build.sh
sparseauxiva/: project.ipynb
src/: common.hpp  libroom.cpp  room.cpp  wall.hpp
tests/: test_create_noisy_signal.py  test_from_corners_extrude.py  test_issue_348.py  test_issue_413.py  test_issue_433.py  test_issue_87.py  test_rake_filters.py  test_rir_hpf.py  test_room_plot.py  test_rt_multiband_energy.py  test_visibility_uroom.py
(+369 files in other folders)
