[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "wheel", "numpy>=1.13.0", "Cython", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroomacoustics"
dynamic = ["version", "readme"]
description = "A simple framework for room acoustics and audio processing in Python."
authors = [
    { name = "Laboratory for Audiovisual Communications, EPFL", email = "fakufaku@gmail.ch" }
]
license = { file = "LICENSE" }
keywords = ["room", "acoustics", "signal processing", "doa", "beamforming", "adaptive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Cython",
    "numpy>=1.13.0",
    "scipy>=0.18.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/LCAV/pyroomacoustics"
Repository = "https://github.com/LCAV/pyroomacoustics.git"
Documentation = "https://pyroomacoustics.readthedocs.io/en/pypi-release/"
Issues = "https://github.com/LCAV/pyroomacoustics/issues"
Changelog = "https://github.com/LCAV/pyroomacoustics/blob/master/CHANGELOG.rst"


[tool.setuptools.dynamic]
readme = { file = ["README.rst"], content-type = "text/x-rst" }

[tool.setuptools]
packages = [
    "pyroomacoustics",
    "pyroomacoustics.adaptive",
    "pyroomacoustics.bss",
    "pyroomacoustics.datasets",
    "pyroomacoustics.denoise",
    "pyroomacoustics.directivities",
    "pyroomacoustics.doa",
    "pyroomacoustics.experimental",
    "pyroomacoustics.phase",
    "pyroomacoustics.random",
    "pyroomacoustics.simulation",
    "pyroomacoustics.transform",
]

[tool.setuptools.package-data]
pyroomacoustics = [
    "*.pxd",
    "*.pyx",
    "data/materials.json",
    "data/sofa_files.json",
]

[tool.setuptools_scm]
write_to = "pyroomacoustics/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  'ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.:UserWarning'
] 

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
# These are often disabled when using Black to avoid conflicts
disable = [
    "C0330", # Wrong hanging indentation
    "C0326", # Bad whitespace
]
